# branchless

./: Cargo.toml  README.md
branchless/: Cargo.toml
branchless/benches/: ipv4.rs
branchless/src/: ip.rs
branchless/testdata/: random
branchless/tests/: ipv4_parity.rs
branchless_core/: Cargo.toml
branchless_core/src/: ip.rs  lib.rs
branchless_core/src/raw/: mod.rs  sse2.rs
crates/branchless/: Cargo.toml
crates/branchless/benches/: ip.rs
crates/branchless/src/: ip.rs  lib.rs
crates/branchless/src/raw/: sse2.rs
crates/branchless/tests/: ip_sse.rs
crates/branchless_core/: Cargo.toml
crates/branchless_derive/: Cargo.toml
